# MobileGlues

./: android_ci_build.bash  build.gradle
.github/workflows/: build.yml
src/main/cpp/: CMakeLists.txt  android_ci_build.bash  gles3.h  includes.h  main.cpp  version.h
src/main/cpp/config/: config.cpp  config.h  gpu_utils.cpp  nsbypass.c  settings.cpp  settings.h
src/main/cpp/egl/: loader.cpp
src/main/cpp/gl/: PolygonMode.cpp  PolygonMode.h  buffer.cpp  buffer.h  drawing.cpp  drawing.h  envvars.cpp  framebuffer.cpp  framebuffer.h  getter.cpp  getter.h  gl.cpp  gl.h  gl_native.cpp  gl_stub.cpp  glcorearb.h  log.cpp  log.h  mg.cpp  mg.h  multidraw.cpp  multidraw.h  pixel.h  program.h  shader.cpp  shader.h  texture.cpp  texture.h  vertexattrib.cpp  vertexattrib.h
src/main/cpp/gl/dsa/: buffer.h  framebuffer.cpp  texture.cpp  texture.h
src/main/cpp/gl/fpe/: drawing1x.cpp  drawing1x.h  fpe.cpp  fpe_shadergen.cpp  list.h  transformation.cpp  transformation.h  types.h  vertexpointer_utils.h
src/main/cpp/gl/glsl/: cache.cpp  glsl_for_es.cpp  glsl_for_es.h  preConvertedGlsl.cpp
src/main/cpp/gl/wrap/: legacy_extensions.cpp  legacy_extensions.h
src/main/cpp/gles/: gles.h  loader.cpp  loader.h
src/main/cpp/glx/: lookup.cpp  lookup.h
src/main/cpp/include/: android_debug.h
src/main/cpp/include/EGL/: egl.h
src/main/cpp/include/GL/: gl.h
